--- a/style/helpers/_mixins.scss
+++ b/style/helpers/_mixins.scss
@@ -10,3 +10,9 @@
         @content;
     }
 }
+
+@mixin bgImageStyle(){
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
