--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,53 +1,18 @@
 // ====== HERO ======= //
-.hero{
+.home-hero{
     position: relative;
-}
-
-.hero-text{
     height: 100vh;
-    max-width: 49rem;
-    @include flex(center);
-    flex-direction: column;
-    align-items: flex-start;
 }
 .hero-swiper{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 100vh;
-    background-color: $dark-blue;
-    z-index: -1;
-    .hero-bg-1{
-        background: linear-gradient(rgba(12, 16, 23, .7), rgba(12, 16, 23, .7)), url(/images/hero-1.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .hero-bg-2{
-        background: linear-gradient(rgba(12, 16, 23, .7), rgba(12, 16, 23, .7)), url(/images/hero-2.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .hero-bg-3{
-        background: linear-gradient(rgba(12, 16, 23, .7), rgba(12, 16, 23, .7)), url(/images/hero-3.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .hero-bg-4{
-        background: linear-gradient(rgba(12, 16, 23, .7), rgba(12, 16, 23, .7)), url(/images/hero-4.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
     .swiper-pagination{
-        right: 0;
-        z-index: 1000;
-        @include flex(flex-start);
-        flex-direction: column;
-        align-items: flex-end;
+        display: none;
+        @include breakpoint(1024px){
+            right: 0;
+            @include flex(flex-start);
+            flex-direction: column;
+            align-items: flex-end;
+        }
         .swiper-pagination-bullet{
             width: 25px;
             height: 3px;
@@ -62,4 +27,40 @@
             opacity: 1;
         }
     }
+}
+
+.home-hero-1{
+    background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/hero-1.jpg);
+    @include bgImageStyle();
+}
+
+.home-hero-2{
+    background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/hero-2.jpg);
+    @include bgImageStyle();
+}
+
+.home-hero-3{
+    background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/hero-3.jpg);
+    @include bgImageStyle();
+}
+
+.home-hero-4{
+    background-image: linear-gradient(rgba(12, 16, 23, 0.702),rgba(12, 16, 23, 0.702)) , url(/images/hero-4.jpg);
+    @include bgImageStyle();
+}
+
+.home-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    @include flex(center);
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
