--- a/style/core/_global.scss
+++ b/style/core/_global.scss
@@ -1,41 +1,39 @@
+.container{
+    padding: 0 5vw;
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+}
 .hero-title{
     font-size: 2.25rem;
-    line-height: 1.1;
     color: $white;
-    font-weight: 600;
-    max-width: 800px;
+    line-height: 1.1;
     @include breakpoint(640px){
-        font-size: 3.25rem;
+        font-size: 3rem;
+        max-width: 700px;
     }
     @include breakpoint(1024px){
         font-size: 4rem;
+        max-width: 800px;
     }
 }
 
 .heading{
     position: relative;
+    display: block;
     color: $white;
-    font-weight: 600;
     font-size: 0.8rem;
     letter-spacing: 0.1em;
-    margin-left: 40px;
-    margin-bottom: 1.5rem;
+    font-weight: 600;
+    margin: 0 0 1.5rem 70px;
     &::before{
+        content: '';
         position: absolute;
         top: 50%;
-        left: -40px;
+        left: -65px;
         transform: translateY(-50%);
-        content: '';
-        width: 30px;
+        width: 45px;
         height: 2px;
         background-color: $red;
     }
-}
-
-.container{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
 }
