--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -23,7 +23,7 @@
             opacity: 0.5;
         }
         .swiper-pagination-bullet-active{
-            width: 40px;
+            width: 50px;
             opacity: 1;
         }
     }
@@ -51,16 +51,16 @@
 
 .home-text{
     position: absolute;
-    top: 0;
+    top: 60%;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 20;
-    @include flex(center);
-    flex-direction: column;
-    align-items: flex-start;
+    transform: translateY(-60%);
+    z-index: 10;
+    padding: 5vw;
     max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 2rem;
+    margin: auto;
+    @include breakpoint(1024px){
+        top: 70%;
+        transform: translateY(-70%);
+    }
 }
