--- a/style/core/_reset.scss
+++ b/style/core/_reset.scss
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: nudista-web, sans-serif;
+    font-family: 'Manrope', sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
 }
