--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -64,3 +64,41 @@
         transform: translateY(-70%);
     }
 }
+
+.video-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(12, 16, 23, 0.902);
+    z-index: 50;
+    @include easeIn(0.3s);
+    opacity: 0;
+    visibility: hidden;
+
+    .gm-video{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 100%;
+        height: 100%;
+        max-width: 80%;
+        max-height: 80%;
+    }
+}
+
+.video-close{
+    width: 60px;
+    height: 60px;
+    color: $white;
+    font-size: 2rem;
+    border-radius: 50%;
+    border: 3px solid $white;
+    @include flex(center);
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    cursor: pointer;
+}
